--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </button>
             </header>
             <nav>
-                <ul>
+                <ul class="menu">
                     <li><button class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button></li>
                     <li><button class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Bateria</button></li>
                     <li><button class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Guitarra</button></li>
