--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -34,7 +34,7 @@
             </nav>
             <footer class="footer-carrito">
                 <div class="numeros-carrito">
-                    <span class="numero-grande">
+                    <span class="numero-grande active">
                         <i class="bi bi-1-square-fill"></i>
                         Compra
                     </span>
@@ -50,11 +50,11 @@
         <main>
             <h2 class="titulo-principal">Carrito</h2>
             <div class="contenedor-carrito">
-                <p class="carrito-vacio">Tu carrito está vacío <i class="bi bi-emoji-frown"></i></p>
-                <div class="carrito-productos">
+                <p class="carrito-vacio">Tu carrito está vacío. <i class="bi bi-emoji-frown"></i></p>
+                <div class="carrito-productos disabled">
 
                     <div class="carrito-producto">
-                        <img src="../img/bateria/bateria1.webp" alt="">
+                        <img class="carrito-producto-imagen" src="../img/bateria/bateria1.webp" alt="">
                         <div class="carrito-producto-titulo">
                             <small>Título</small>
                             <h3>Bateria 01</h3>
@@ -62,9 +62,9 @@
                         <div class="carrito-producto-cantidad">
                             <small>cantidad</small>
                             <div class="carrito-control">
-                                <button class="carrito-control">-</button>
+                                <button class="carrito-control-boton"><span class="carrito-control-signo">-</span></button>
                                 <span>1</span>
-                                <button class="carrito-control">+</button>
+                                <button class="carrito-control-boton"><span class="carrito-control-signo">+</span></button>
                             </div>
                         </div>
                         <div class="carrito-producto-precio">
@@ -78,7 +78,7 @@
                         <button class="carrito-producto-eliminar"><i class="bi bi-trash-fill"></i></button>
                     </div>
                     <div class="carrito-producto">
-                        <img src="../img/bateria/bateria2.webp" alt="">
+                        <img class="carrito-producto-imagen" src="../img/bateria/bateria2.webp" alt="">
                         <div class="carrito-producto-titulo">
                             <small>Título</small>
                             <h3>Bateria 02</h3>
@@ -86,9 +86,9 @@
                         <div class="carrito-producto-cantidad">
                             <small>cantidad</small>
                             <div class="carrito-control">
-                                <button class="carrito-control">-</button>
+                                <button class="carrito-control-boton"><span class="carrito-control-signo">-</span></button>
                                 <span>2</span>
-                                <button class="carrito-control">+</button>
+                                <button class="carrito-control-boton"><span class="carrito-control-signo">+</span></button>
                             </div>
                         </div>
                         <div class="carrito-producto-precio">
@@ -103,12 +103,12 @@
                     </div>
 
                 </div>
-                <div class="carrito-acciones">
+                <div class="carrito-acciones disabled">
                     <div class="carrito-acciones-izquierda">
                         <button class="carrito-acciones-vaciar">Vaciar carrito</button>
                     </div>
                     <div class="carrito-acciones-derecha">
-                        <div class="carrito-acciones-comprar">
+                        <div class="carrito-acciones-total">
                             <p>Total:</p>
                             <p id="total">$3000</p> 
                         </div>
@@ -116,6 +116,8 @@
                     </div>
                 </div>
                 
+                <p class="carrito-comprado disabled">Muchas gracias por tu compra. <i class="bi bi-emoji-laughing"></i></p>
+
             </div>
 
             <form class="formulario">
