--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <main>
             <div class="buscador">
-                <input type="search"id="search">
+                <input type="search"id="search" placeholder="Buscar producto...">
                 <label for="search"><i class="bi bi-search"></i></label>
             </div>
             <h2 class="titulo-principal">Todos los productos</h2>
