correcion detalles css

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -35,11 +35,11 @@
             <footer class="footer-carrito">
                 <div class="numeros-carrito">
                     <span class="numero-grande active">
-                        <i class="bi bi-1-square-fill"></i>
+                        <span>1</span>
                         Compra
                     </span>
                     <span class="numero-grande">
-                        <i class="bi bi-2-square-fill"></i>
+                        <span>2</span>
                         Envío
                     </span>
                 </div>
@@ -60,7 +60,7 @@
                             <h3>Bateria 01</h3>
                         </div>
                         <div class="carrito-producto-cantidad">
-                            <small>cantidad</small>
+                            <small>Cantidad</small>
                             <div class="carrito-control">
                                 <button class="carrito-control-boton"><span class="carrito-control-signo">-</span></button>
                                 <span>1</span>
@@ -84,7 +84,7 @@
                             <h3>Bateria 02</h3>
                         </div>
                         <div class="carrito-producto-cantidad">
-                            <small>cantidad</small>
+                            <small>Cantidad</small>
                             <div class="carrito-control">
                                 <button class="carrito-control-boton"><span class="carrito-control-signo">-</span></button>
                                 <span>2</span>
@@ -120,7 +120,7 @@
 
             </div>
 
-            <form class="formulario">
+            <form class="formulario disabled">
                 <div class="formulario-input">
                     <label for="nombre-formulario">Nombre:</label>
                     <input type="text" name="nombre-formulario" id="nombre-formulario" placeholder="Nombre">
