--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -121,7 +121,9 @@
             </div>
 
             <form class="formulario disabled">
-                <div class="formulario-input">
+                <h4 class="titulo-formulario">Rellenar formulario de compra</h4>
+                <div class="formulario-div">
+
                     <label for="nombre-formulario">Nombre:</label>
                     <input type="text" name="nombre-formulario" id="nombre-formulario" placeholder="Nombre">
                     <label for="apellido-formulario">Apellido:</label>
