final css corregido

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -147,6 +147,7 @@
 
     </div>
     
+    <script src="../js/temadark.js"></script>
     <script src="../js/carrito.js"></script>
 </body>
 </html>
