--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </header>
             <nav>
                 <ul class="menu">
-                    <li><button class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button></li>
-                    <li><button class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Bateria</button></li>
-                    <li><button class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Guitarra</button></li>
-                    <li><button class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Piano</button></li>
-                    <li><button class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Viento</button></li>
-                    <li><a class="boton-menu boton-carrito" href="./pages/carrito.html"><i class="bi bi-cart-fill"></i> Carrito <span class="numerito">0</span></a></li>
+                    <li><button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button></li>
+                    <li><button id="baterias" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Baterias</button></li>
+                    <li><button id="guitarras" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Guitarras</button></li>
+                    <li><button id="pianos" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Pianos</button></li>
+                    <li><button id="vientos" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Vientos</button></li>
+                    <li><a class="boton-menu boton-carrito" href="./pages/carrito.html"><i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span></a></li>
                 </ul>
             </nav>
             <footer>
@@ -37,40 +37,9 @@
             <div class="buscador">
                 <input type="search"id="search" placeholder="Buscar producto...">
             </div>
-            <h2 class="titulo-principal">Todos los productos</h2>
-            <div class="contenedor-productos">
-                <div class="producto">
-                    <img class="producto-imagen" src="./img/bateria/bateria1.webp" alt="">
-                    <div class="producto-detalles">
-                        <h3 class="producto-titulo">Bateria 01</h3>
-                        <p class="producto-precio">$2000</p>
-                        <button class="producto-agregar">Agregar</button>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img class="producto-imagen" src="./img/bateria/bateria2.webp" alt="">
-                    <div class="producto-detalles">
-                        <h3 class="producto-titulo">Bateria 02</h3>
-                        <p class="producto-precio">$2000</p>
-                        <button class="producto-agregar">Agregar</button>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img class="producto-imagen" src="./img/bateria/bateria3.webp" alt="">
-                    <div class="producto-detalles">
-                        <h3 class="producto-titulo">Bateria 03</h3>
-                        <p class="producto-precio">$2000</p>
-                        <button class="producto-agregar">Agregar</button>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img class="producto-imagen" src="./img/bateria/bateria4.webp" alt="">
-                    <div class="producto-detalles">
-                        <h3 class="producto-titulo">Bateria 04</h3>
-                        <p class="producto-precio">$2000</p>
-                        <button class="producto-agregar">Agregar</button>
-                    </div>
-                </div>
+            <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
+            <div id="contenedor-productos" class="contenedor-productos">
+                <!--CARGA DE PRODUCTOS CON JS-->
             </div>
         </main>
 
