cambio de rutas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><button id="guitarras" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Guitarras</button></li>
                     <li><button id="pianos" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Pianos</button></li>
                     <li><button id="vientos" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Vientos</button></li>
-                    <li><a class="boton-menu boton-carrito" href="./pages/carrito.html"><i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span></a></li>
+                    <li><a class="boton-menu boton-carrito" href="./carrito.html"><i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span></a></li>
                 </ul>
             </nav>
             <footer>
