--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Sinfonix - Comprar</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="boton-menu boton-volver" href="../index.html">
+                        <a class="boton-menu boton-volver" href="./index.html">
                             <i class="bi bi-arrow-return-left"></i> Seguir comprando
                         </a>
                     </li>
@@ -101,7 +101,7 @@
 
     </div>
     
-    <script src="../js/temadark.js"></script>
-    <script src="../js/carrito.js"></script>
+    <script src="./js/temadark.js"></script>
+    <script src="./js/carrito.js"></script>
 </body>
 </html>
