finalizar pago y carrito

--- a/carrito.html
+++ b/carrito.html
@@ -137,7 +137,7 @@
                 <form class="formulario-tarjeta">
                     <div class="tarjeta-input">
                         <label for="input-tarjeta-numero">Numero de tarjeta:</label>
-                        <input type="tel" id="input-tarjeta-numero" placeholder="Numero de tarjeta" required>
+                        <input type="tel" id="input-tarjeta-numero" maxlength="19" placeholder="Numero de tarjeta" required>
                     </div>
                     <div class="tarjeta-input">
                         <label for="input-tarjeta-nombre">Nombre y apellido:</label>
