correciones variadas new

--- a/carrito.html
+++ b/carrito.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="tarjeta-input">
                         <label for="input-tarjeta-nombre">Nombre y apellido:</label>
-                        <input type="text" id="input-tarjeta-nombre" placeholder="Nombre y Apellido" required>
+                        <input type="text" id="input-tarjeta-nombre" maxlength="40" placeholder="Nombre y Apellido" required>
                     </div>
                     <div class="tarjeta-input-chico">
                         <div class="tarjeta-input">
