final trabajo mas nuevo fetch

--- a/carrito.html
+++ b/carrito.html
@@ -89,9 +89,10 @@
                     <input type="email" name="email-formulario" id="email-formulario" placeholder="Email" required>
                     <label for="destino-formulario">Destino:</label>
                     <select name="destino-formulario" id="destino-formulario">
+                        <option value="Elegir destino" selected disabled>Elegir destino</option>
                         <option value="Argentina">Argentina</option>
-                        <option value="Chile">Chile</option>
-                        <option value="Uruguay">Uruguay</option>
+                        <option value="Estados Unidos">Estados Unidos</option>
+                        <option value="Francia">Francia</option>
                     </select>
                     <div id="mensaje-validacion" class="mensaje-validacion"></div>
                     <button class="boton-formulario" type="button">Comprar</button>
